fix restaurant header img visibility

--- a/css/style.css
+++ b/css/style.css
@@ -591,12 +591,20 @@ li a {
   h4 {
     font-size: 21px;
   }
+  .header_content img {
+    height: 100vh;
+    width: 211%;
+  }
   .wrapper-bg-restaurant {
     margin-top: 20%;
     flex-wrap: wrap;
   }
   .list_plates-label:hover {
     width: 95%;
+  }
+  .footer-bg {
+    position: relative;
+    bottom: 0;
   }
 }
 
